k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: heart-ml
  labels:
    app.kubernetes.io/part-of: heart-disease-mlops
