k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-api
  namespace: heart-ml
  labels:
    app: heart-api
spec:
  type: LoadBalancer
  selector:
    app: heart-api
  ports:
    - name: http
      port: 8000
      targetPort: http
