k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heart-api
  namespace: heart-ml
spec:
  ingressClassName: nginx
  rules:
    - host: heart.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heart-api
                port:
                  number: 8000
